--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,14 @@
+2012-04-22  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* alloc.c: Handle unusual debugging option combinations.
+	(GC_CHECK_MARKED_OBJECTS): Undef if ! GC_MARK_STACK,
+	since the two debugging options are incompatible.
+	(GC_MALLOC_CHECK): Similarly, undef if GC_CHECK_MARKED_OBJECTS
+	is defined.
+	(mem_init, mem_insert, mem_insert_fixup):
+	Define if GC_MARK_STACK || GC_MALLOC_CHECK.
+	(NEED_MEM_INSERT): Remove; no longer needed.
+
 2012-04-22  Leo Liu  <sdl.web@gmail.com>
 
 	* sysdep.c (list_system_processes): Support Darwin (Bug#5725).
