--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-04-22  Alan Mackenzie  <acm@muc.de>
+
+	* progmodes/cc-engine.el (c-append-lower-brace-pair-to-state-cache):
+	Adding a ) can hide the resulting (..) from searches.  Fix it.
+	Bound the backward search to the position of the existing (.
+
 2012-04-21  Juanma Barranquero  <lekktu@gmail.com>
 
 	* progmodes/verilog-mode.el (verilog-mode): Check whether
